yaobank/templates/networkpolicy.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-tcp
  namespace: yaobank
spec:
  selector: app == 'summary'
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: app == 'customer'
    destination:
      ports:
        - 80
